# WorbotsSetup

./: Cargo.toml
src/: data.rs  main.rs  output.rs  package.rs  utils.rs
src/assets/: Joystick_Extreme3DPro.json  README.txt  mod.rs
src/install/: advantagescope.rs  cachecad.rs  etcher.rs  game_tools.rs  github_desktop.rs  grip.rs  limelight_finder.rs  mod.rs  pathplanner.rs  phoenix.rs  rev_client.rs  wpilib.rs
src/ui/: clone.rs  mod.rs  packages.rs
