[package]
name = "worbots_setup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
color-print = "0.3.5"
directories = "5.0.1"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
zip-extract = "0.1.2"
