[package]
name = "worbots_setup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive"] }
color-print = "0.3.5"
directories = "5.0.1"
inquire = "0.6.2"
mslnk = "0.1.8"
native-windows-derive = "1.0.5"
native-windows-gui = { version = "1.0.13", features = [
	"list-view",
	"combobox",
	"image-list",
	"frame",
	"listbox",
	"tray-notification",
	"message-window",
	"menu",
	"cursor"
] }
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
textwrap = "0.16.0"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
zip-extract = "0.1.2"
